test/files/neg/java-annotation-bad.check
Test_1.scala:12: error: Java annotation Ann_0 is abstract; cannot be instantiated
  val a: Ann_0 = new Ann_0          // nok
                 ^
Test_1.scala:13: error: Java annotation Ann_0 is abstract; cannot be instantiated
  val b: Ann_0 = new Ann_0(Array()) // nok
                     ^
Test_1.scala:14: error: Java annotation Ann_1 is abstract; cannot be instantiated
  val c: Ann_1 = new Ann_1          // nok
                 ^
Test_1.scala:15: error: Java annotation Ann_1 is abstract; cannot be instantiated
  val d: Ann_1 = new Ann_1(Array()) // nok
                     ^
Test_1.scala:18: error: type mismatch;
 found   : ann.Ann_0
 required: scala.annotation.Annotation
  val e: Annotation         = a // nok
                              ^
Test_1.scala:19: error: type mismatch;
 found   : ann.Ann_1
 required: scala.annotation.Annotation
  val f: Annotation         = c // nok
                              ^
Test_1.scala:20: error: type mismatch;
 found   : ann.Ann_0
 required: scala.annotation.StaticAnnotation
  val g: StaticAnnotation   = a // nok
                              ^
Test_1.scala:21: error: type mismatch;
 found   : ann.Ann_1
 required: scala.annotation.StaticAnnotation
  val h: StaticAnnotation   = c // nok
                              ^
Test_1.scala:22: error: type mismatch;
 found   : ann.Ann_0
 required: scala.annotation.ConstantAnnotation
  val i: ConstantAnnotation = a // nok
                              ^
Test_1.scala:23: error: type mismatch;
 found   : ann.Ann_1
 required: scala.annotation.ConstantAnnotation
  val j: ConstantAnnotation = c // nok
                              ^
10 errors
